# mockpath

./: README.md  main.py  pyproject.toml
api/v1/users/: list.get.resp.1.json  list.get.yaml  profile.post.resp.1.json  profile.post.yaml
src/mockpath/: __init__.py  cli.py
